--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet"> 
 </head>
 <body> 
     <div class="main">
@@ -35,7 +36,7 @@
     color:#f7f7e9;
     font-weight: bold;
     text-transform: uppercase;
-    font-family: orbitron;
+    font-family: 'Orbitron', sans-serif;
     font-size:8em;
 }
 .main .dt{
