--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <head>
     <title>Digital Trajectory</title>
     <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet"> 
+<!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<![endif]-->
 </head>
 <body> 
     <div class="main">
@@ -38,7 +42,7 @@
     font-weight: bold;
     text-transform: uppercase;
     font-family: 'Orbitron', sans-serif;
-    font-size:8em;
+    font-size:10vw;
 }
 .main .dt{
         color:#f7f7e9;
