--- a/index.html
+++ b/index.html
@@ -30,16 +30,6 @@
           <button>
             <a href="https://www.twitter.com/roryjames___" target="_blank">
             <svg viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
-
-                <defs>
-                <filter id="glow">
-                    <feGaussianBlur stdDeviation="2.5" result="coloredBlur"/>
-                    <feMerge>
-                        <feMergeNode in="coloredBlur"/>
-                        <feMergeNode in="SourceGraphic"/>
-                    </feMerge>
-                </filter>
-            </defs>
             <path d="M679 239s-21 34-55 57c7 156-107 329-314 329-103 0-169-50-169-50s81 17 163-45c-83-5-103-77-103-77s23 6 50-2c-93-23-89-110-89-110s23 14 50 14c-84-65-34-148-34-148s76 107 228 116c-22-121 117-177 188-101 37-6 71-27 71-27s-12 41-49 61c30-2 63-17 63-17z"/>
               </svg>
               </a>
@@ -91,6 +81,12 @@
         border:none;
         cursor:pointer;
         }
+    .social button path{
+        fill:white;
+    }
+    .social button path:hover{
+        fill:lightgray;
+    }
         @media (max-width:768px){
             .social button{
                 width:20vw;
