--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           </button>
     </div>
 </div>
+<footer>
+  <p>© 2020 All rights reserved.</p>
+</footer>
 </body>
 <script>
     (function loop() {
