--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <head>
+  
+<meta charset="UTF-8">
+
     <title>Digital Trajectory</title>
     <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="./assets/styles.css">
